--- a/src/UI/Navigation/Navigation.css
+++ b/src/UI/Navigation/Navigation.css
@@ -15,6 +15,7 @@
     border: 0;
     border-right: 0.5px solid white;
     outline: none;
+    cursor: pointer;
 }
 
 .Navigation button:last-child {
