--- a/src/UI/Input/input.css
+++ b/src/UI/Input/input.css
@@ -2,6 +2,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    align-self: stretch;
+    text-align: center;
     margin: 4px 4px;
 }
 
@@ -12,4 +14,5 @@
 
 .InputContainer input {
     height: 18px;
+    text-align: center;
 }
